--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon 2daPreEntregaPF/src/server.js"
+    "dev": "nodemon EntregaFinal/src/server.js"
   },
   "repository": {
     "type": "git",
